# school-rs

./: .env  Cargo.toml  README.md  STRUCTURE.md
app/: Cargo.toml
app/src/: main.rs
assets/templates/: base.html.tera  course-details.html.tera  courses.html.tera  dashboard.html.tera  login.html.tera  profile.html.tera  students.html.tera
libs/db/: Cargo.toml
libs/db/src/: lib.rs
libs/handlers/: Cargo.toml
libs/handlers/src/: auth.rs  courses.rs  dashboard.rs  dummy.rs  students.rs
libs/models/: Cargo.toml
libs/models/src/: academic_unit.rs  institution.rs  lib.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_institution.rs  user_role.rs
libs/routes/: Cargo.toml
libs/routes/src/: lib.rs
libs/schemas/: Cargo.toml
libs/schemas/src/: lib.rs  permission.rs  role.rs  role_permission.rs  ui.rs  user.rs  user_institution.rs  user_role.rs
libs/utils/: Cargo.toml
libs/utils/src/: lib.rs
migrations/: 20250831120416_init.sql  20250831142919_down.sql
src/: main.rs  routes.rs  templates.rs
src/db/: connection.rs  mod.rs
src/handlers/: auth.rs  courses.rs  dashboard.rs  dummy.rs  mod.rs  students.rs
src/utils/: template.rs
templates/: register.html.tera
