[workspace]
resolver = "2"
members = [
    "app",
    "libs/*",
]

exclude = [
    "target",
    ".vscode",
    "**/target",
    "**/tests",
    "**/examples",
    "**/node_modules",
    "**/dist",
    "**/*.rs.bk",
    "**/*.log",
    "**/*.tmp",
    "**/*.temp",
    "**/*.swp",
    "**/*.swo",
    "**/*.DS_Store",
]

[workspace.dependencies]
# Shared Web Framework Dependancies
actix-identity = "0.9.0"
actix-session = {version = "0.11.0", features = ["cookie-session"]}
actix-web = "4.11.0"
lazy_static = "1.5.0"
actix-files = "0.6.7"
tera = "1.20.0"
anyhow = "1.0.71"

# Other Utility Modules
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["full"] }

# Database Modules
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "uuid", "macros", "derive"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }

# Integrity Check Modules
time = { version = "0.3.28", features = ["formatting", "macros"] }
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"] }

# API Documentation Modules